test/fixtures/themes/001-deprecations/valid/default.hbs
<html>
<head>

    <title>Test Theme</title>
    <link rel="stylesheet" type="text/css" href="{{asset "css/styles.css"}}">
    {{ghost_head}}
</head>
<body>
    {{page_url 'lol'}}
    {{@config.posts_per_page}}

    {{author.profile_image}}
</body>
    {{ghost_foot}}
</html>
