test/fixtures/themes/001-deprecations/invalid/default.hbs
<html>
<head>

    <meta name="description" content="{{meta_description}}">
    <title>Test Theme</title>
    <link rel="stylesheet" type="text/css" href="{{asset "css/styles.css"}}">
    {{ghost_head}}
</head>
<body>
    {{pageUrl 'lol'}}
    {{@blog.posts_per_page}}

    {{author.image}}
</body>
    {{ghost_foot}}
</html>
